src/test/ui/error-codes/E0110.stderr
error[E0109]: lifetime arguments are not allowed for this type
  --> $DIR/E0110.rs:1:14
   |
LL | type X = u32<'static>;
   |              ^^^^^^^ lifetime argument not allowed

error: aborting due to previous error

For more information about this error, try `rustc --explain E0109`.
