src/test/ui/error-codes/E0110.rs
type X = u32<'static>; //~ ERROR E0109

fn main() {}
